force-app/main/default/objects/Convsta_Competences__mdt/Convsta_Competences__mdt.object-meta.xml
<CustomObject>
    <description>Regroupe les compétences 
EarlyMaker
Comportementales
Métiers</description>
    <label>Convsta_Competences</label>
    <pluralLabel>Convsta_Competences</pluralLabel>
</CustomObject>