force-app/main/default/objects/Convsta_Competences__mdt/fields/Famille_metier__c.field-meta.xml
<CustomField>
    <fullName>Famille_metier__c</fullName>
    <label>Famille métier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>