force-app/main/default/objects/Convsta_Competences__mdt/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name_Fr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>