force-app/main/default/objects/Convsta_Competences__mdt/fields/Name_En__c.field-meta.xml
<CustomField>
    <fullName>Name_En__c</fullName>
    <label>Name_En</label>
    <length>255</length>
    <type>Text</type>
</CustomField>