force-app/main/default/objects/Convsta_Competences__mdt/listViews/tout.listView-meta.xml
<ListView>
    <fullName>tout</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Name_En__c</columns>
    <columns>Name__c</columns>
    <columns>Famille_metier__c</columns>
    <columns>Type__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>tout</label>
    <language>fr</language>
</ListView>